# restaurant-agent

./: .env.example  .gitignore  README.md  chat.py  main.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-05-28-restaurant-agent.md
docs/superpowers/specs/: 2026-05-28-restaurant-agent-design.md
docs/traces/: trace_20260529_083205.md  trace_20260529_084036.md  trace_20260529_084103.md  trace_20260529_084202.md  trace_20260529_084230.md  trace_20260529_090741.md  trace_20260529_091105.md  trace_20260529_091722.md  trace_20260529_093115.md  trace_20260529_093948.md  trace_20260529_094142.md  trace_20260529_095130.md  trace_20260529_102536.md  trace_20260529_103007.md  trace_20260529_103450.md  trace_20260529_103704.md  trace_20260529_103725.md  trace_20260529_103747.md  trace_20260529_103839.md  trace_20260529_104040.md  trace_20260529_104650.md  trace_20260529_111531.md  trace_20260529_111547.md  trace_20260529_111639.md  trace_20260529_112740.md  trace_20260529_114616.md
scripts/: seed_memory.py
src/agent/: graph.py  prompts.py  state.py  types.py
src/agent/nodes/: aggregator.py  finalizer.py  (+7 more)
src/memory/: store.py
src/observability/: telemetry.py
src/tools/: _http.py  geocode.py  google_places.py  kakao_local.py  menu_crawler.py  naver_local.py
src/ui/: renderer.py
tests/: test_chat.py
tests/agent/: test_graph.py  test_types.py
tests/memory/: test_store.py
tests/observability/: test_telemetry.py
tests/tools/: test_geocode.py  test_google_places.py  test_kakao_local.py  test_naver_local.py
tests/ui/: test_renderer.py
(+7 files in other folders)
