[project]
name = "assign4"
version = "0.1.0"
requires-python = ">=3.13"
description = "LangGraph ReAct agent for restaurant recommendation (OSS Assign4)"
dependencies = [
    "arize-phoenix-otel>=0.16.1",
    "httpx>=0.27",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "openai>=1.50",
    "openinference-instrumentation-langchain>=0.1.66",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",
    "rich>=13.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
